--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,14 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <title>CheckMate</title>
-    <meta property="og:title" content="CheckMate" data-rdm="">
-    <meta property="og:url" content="https://checkmate.sg" data-rdm="">
-    <meta property="og:description" content="Easily check if the messages you received are scams." data-rdm="">
-    <meta property="og:image" content="https://checkmate.sg/logo.jpg" data-rdm="">
-    <meta property="og:type" content="website" data-rdm="">
-    <meta property="og:locale" content="en_GB" data-rdm="">
-    <meta name="description" content="Easily check if the messages you received are scams" data-rdm="">
-    <link rel="canonical" href="https://checkmate.sg" data-rdm="">
+    <meta property="og:title" content="CheckMate" data-rdm="" />
+    <meta property="og:url" content="https://checkmate.sg" data-rdm="" />
+    <meta
+      property="og:description"
+      content="Easily check if the messages you received are scams."
+      data-rdm=""
+    />
+    <meta
+      property="og:image"
+      content="https://checkmate.sg/logo.jpg"
+      data-rdm=""
+    />
+    <meta property="og:type" content="website" data-rdm="" />
+    <meta property="og:locale" content="en_GB" data-rdm="" />
+    <meta
+      name="description"
+      content="Easily check if the messages you received are scams"
+      data-rdm=""
+    />
+    <link rel="canonical" href="https://checkmate.sg" data-rdm="" />
   </head>
   <body>
     <div id="root"></div>
